--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -18,7 +18,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../assets/landing-bg.jpg"); /* Ensure image is in the correct folder */
+    background-image: url("../assets/plant-store.jpeg"); /* Ensure image is in the correct folder */
     background-size: cover;
     background-position: center;
     opacity: 0.5; /* Adjust the opacity level */
