--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -10,7 +10,6 @@
     overflow: hidden;
 }
 
-/* Pseudo-element for background image with opacity */
 .landing-container::before {
     content: "";
     position: absolute;
@@ -18,10 +17,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../assets/plant-store.jpeg"); /* Ensure image is in the correct folder */
+    background-image: url("../assets/nurcery.avif"); 
     background-size: cover;
     background-position: center;
-    opacity: 0.5; /* Adjust the opacity level */
+    opacity: 0.8;
     z-index: -1;
 }
 
@@ -31,7 +30,7 @@
     align-items: center;
     flex-direction: column;
     gap: 15px;
-    z-index: 1; /* Ensures text is above the background */
+    z-index: 1;
 }
 
 .landing-title {
@@ -60,5 +59,5 @@
     max-width: 40%;
     font-size: 1.2rem;
     line-height: 1.5;
-    z-index: 1; /* Ensures text is above the background */
+    z-index: 1; 
 }
